# InkStone

./: .gitignore  README.md
Iteration-three/: .gitignore  CLAUDE.md  Makefile  README.md  gen_char_expand.py  gen_foreshadow_expand.py  start-dev.py  (+1 more)
Iteration-three/backend/: .gitignore  Dockerfile  README.md  pyproject.toml
Iteration-three/backend/app/: main.py
Iteration-three/backend/app/api/v1/: characters.py  chat.py  config.py  outlines.py  projects.py  skills.py
Iteration-three/backend/app/core/: errors.py  retry.py  serialization_utils.py
Iteration-three/backend/app/core/agent/: langchain_subagents.py  novel_context_middleware.py  skill_middleware.py  tool_factory.py  tool_validation.py
Iteration-three/backend/app/core/graph/: builder.py
Iteration-three/backend/app/core/prompts/: orchestrator.py
Iteration-three/backend/app/core/prompts/tools/: plot.py
Iteration-three/backend/app/db/: checkpointer.py  connection.py  schema.sql
Iteration-three/backend/app/services/: base.py  chapter.py  character.py  config_repository.py  content.py  foreshadowing.py  knowledge.py  knowledge_extractor.py  llm.py  novel_context_builder.py  project_repository.py  review.py  session_repository.py
Iteration-three/backend/tests/: test_api.py  test_chapters_api.py  test_chat_error_handling.py  test_config_api.py  test_content_service.py  test_database.py  test_foreshadowing.py  test_knowledge_extractor.py  test_knowledge_service.py  test_novel_context_builder.py  test_outlines_api.py  test_retry.py  test_skill_middleware.py  test_skill_tools.py  test_tools.py  test_v2_streaming.py  test_world_api.py
(+436 files in other folders)
